2008-05-26  Sam Steingold  <sds@gnu.org>

	* floatparam.c, intparam.c: write to conftest.h, not stdout
	* m4/address.m4, m4/eloop.m4, m4/filecharset.m4, m4/param.m4:
	use AC_RUN_IFELSE instead of undocumented AC_TRY_EVAL(ac_link)

2008-05-25  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (setjmp, longjmp) [HAVE__JMP]: on all autoconf platforms
	(UNIX & __MINGW32__), use _setjmp and _longjmp whenever they are present

2008-05-25  Sam Steingold  <sds@gnu.org>

	* spvw_sigint.d (signal_handler_prepare_for_lisp): extracted from
	react_on_sigint()
	(react_on_sigint): call it
	* spvw_sigterm.d (quit_on_signal): ditto

2008-05-25  Bruno Haible  <bruno@clisp.org>

	* m4/signal.m4 (CL_SIGNALBLOCK): Remove macro.
	(CL_SIGNAL_UNBLOCK, CL_SIGNAL_BLOCK_OTHERS, CL_SIGACTION_UNBLOCK):
	Assume POSIX signal-blocking.
	* unix.d (SIGNALBLOCK_POSIX): Define always.
	* spvw.d (main): Assume SIGNALBLOCK_POSIX on Unix.
	* spvw_sigint.d (react_on_sigint): Likewise.
	* spvw_sigsegv.d (stackoverflow_handler): Likewise.
	* configure.in (CL_SIGNALBLOCK): Remove invocation.

2008-05-25  Bruno Haible  <bruno@clisp.org>

	* floatparam.c: Remove support for K&R C compilers.
	* intparam.c: Likewise.

2008-05-23  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1970141 ]: link.sh should respect $(MAKE)
	* makemake.in (base, full): set MAKE when calling clisp-link
	* modules/berkeley-db/link.sh.in, modules/bindings/glibc/link.sh:
	* modules/bindings/win32/link.sh, modules/clx/mit-clx/link.sh:
	* modules/clx/new-clx/link.sh.in, modules/dirkey/link.sh:
	* modules/fastcgi/link.sh, modules/gdbm/link.sh.in:
	* modules/gtk2/link.sh.in, modules/i18n/link.sh.in:
	* modules/libsvm/link.sh, modules/matlab/link.sh:
	* modules/netica/link.sh, modules/oracle/link.sh:
	* modules/pari/link.sh.in, modules/pcre/link.sh.in:
	* modules/postgresql/link.sh.in, modules/queens/link.sh:
	* modules/rawsock/link.sh.in, modules/readline/link.sh.in:
	* modules/regexp/link.sh.in, modules/syscalls/link.sh.in: